[package]
name = "bitwarden-crypto"
description = """
Internal crate for the bitwarden crate. Do not use.
"""

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[features]
default = []
no-memory-hardening = [] # Disable memory hardening features
uniffi = [
    "argon2/parallel",
    "bitwarden-encoding/uniffi",
    "dep:bitwarden-uniffi-error",
    "dep:uniffi",
] # Uniffi bindings
wasm = ["dep:tsify", "dep:wasm-bindgen"] # WASM support
# WARNING: This feature is for debugging purposes only and should never be enabled in production.
# It disables compile-time debug prevention for cryptographic keys, exposing sensitive key material
# in debug output, and adds tracing debug logs to encrypt/decrypt operations.
dangerous-crypto-debug = []

[dependencies]
aes = { version = ">=0.8.2, <0.9", features = ["zeroize"] }
argon2 = { version = "=0.6.0-rc.2", features = [
    "std",
    "zeroize",
], default-features = false }
bitwarden-encoding = { workspace = true }
bitwarden-error = { workspace = true }
bitwarden-uniffi-error = { workspace = true, optional = true }
cbc = { version = ">=0.1.2, <0.2", features = ["alloc", "zeroize"] }
chacha20poly1305 = { version = "0.10.1" }
ciborium = { version = ">=0.2.2, <0.3" }
coset = { version = ">=0.3.8, <0.5" }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
generic-array = { version = ">=0.14.7, <1.0", features = ["zeroize"] }
hkdf = ">=0.12.3, <0.13"
hmac = ">=0.12.1, <0.13"
num-bigint = ">=0.4, <0.5"
num-traits = ">=0.2.15, <0.3"
pbkdf2 = { version = ">=0.12.1, <0.13", default-features = false }
rand = { workspace = true }
rand_chacha = ">=0.3.1, <0.4.0"
rayon = ">=1.8.1, <2.0"
rsa = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_repr.workspace = true
sha1 = { workspace = true }
sha2 = ">=0.10.6, <0.11"
subtle = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tsify = { workspace = true, optional = true }
typenum = ">=1.18.0, <1.19.0"
uniffi = { workspace = true, optional = true }
uuid = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
zeroize = { version = ">=1.7.0, <2.0", features = ["derive", "aarch64"] }
zeroizing-alloc = ">=0.1.0, <0.2"

[dev-dependencies]
criterion = "0.7.0"
rand_chacha = "0.3.1"
serde_json = { workspace = true }

[[bench]]
name = "default_allocator"
harness = false
required-features = ["no-memory-hardening"]

[[bench]]
name = "zeroizing_allocator"
harness = false
required-features = ["no-memory-hardening"]

[lints]
workspace = true
