[package]
name = "bitwarden-error-macro"
description = """
Internal crate for the bitwarden crate. Do not use.
"""

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[features]
wasm = []

[dependencies]
darling = "0.23.0"
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
js-sys.workspace = true
serde.workspace = true
thiserror.workspace = true
tsify.workspace = true
wasm-bindgen.workspace = true

[lints]
workspace = true
