[package]
name = "bitwarden-error"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[features]
wasm = ["bitwarden-error-macro/wasm", "wasm-bindgen"]

[dependencies]
bitwarden-error-macro = { version = "1.0.0", path = "../bitwarden-error-macro" }
wasm-bindgen = { workspace = true, optional = true }

[lints]
workspace = true

[dev-dependencies]
js-sys = "0.3.72"
serde.workspace = true
tsify-next = "0.5.4"
wasm-bindgen-test = "0.3.45"
