[package]
name = "bitwarden-flight-recorder"
description = """
Flight Recorder infrastructure for capturing and exporting diagnostic logs.
Internal crate for the bitwarden crate. Do not use.
"""

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[features]
default = []
wasm = ["dep:tsify", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]

[dependencies]
bitwarden-error = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tsify = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { workspace = true, features = ["wasmbind"] }

[dev-dependencies]
criterion = { version = "0.8.0", default-features = false }
js-sys = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen-test = { workspace = true }

[[bench]]
name = "flight_recorder_performance"
harness = false

[lints]
workspace = true
