[package]
name = "bitwarden-importers"
description = """
Internal crate for the bitwarden crate. Do not use.
"""

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[features]
uniffi = [
    "dep:uniffi",
    "bitwarden-core/uniffi",
    "bitwarden-vault/uniffi",
    "bitwarden-exporters/uniffi",
]
wasm = [
    "bitwarden-collections/wasm",
    "bitwarden-vault/wasm",
    "bitwarden-exporters/wasm",
    "dep:tsify",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
]

[dependencies]
aes = { version = "0.9.0", features = ["zeroize"] }
aes-gcm = { version = "0.11.0-rc.4", features = ["zeroize"] }
bitwarden-api-api = { workspace = true }
bitwarden-collections = { workspace = true }
bitwarden-core = { workspace = true }
bitwarden-crypto = { workspace = true }
bitwarden-error = { workspace = true }
bitwarden-exporters = { workspace = true }
bitwarden-vault = { workspace = true }
cbc = { version = "0.2.0", features = ["alloc", "zeroize"] }
chrono = { workspace = true, features = ["std"] }
data-encoding = { workspace = true }
keepass = { workspace = true }
p256 = { version = "0.14.0-rc.9", features = ["alloc", "ecdh", "pkcs8"], default-features = false }
rand = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
tsify = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
uuid = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
zeroize = { workspace = true }

[dev-dependencies]
bitwarden-core = { workspace = true, features = ["internal", "test-fixtures"] }
keepass = { workspace = true, features = ["save_kdbx4"] }
tokio = { workspace = true, features = ["rt"] }

[lints]
workspace = true
