[package]
name = "bitwarden-ipc"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[features]
noise = ["dep:snow", "dep:ciborium", "dep:serde_bytes"]
wasm = [
    "dep:tsify",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "bitwarden-error/wasm",
    "bitwarden-threading/wasm",
] # WASM support

[dependencies]
async-trait = { workspace = true }
bitwarden-error = { workspace = true }
bitwarden-threading = { workspace = true }
ciborium = { version = "0.2.2", optional = true }
erased-serde = ">=0.4.6, <0.5"
js-sys = { workspace = true, optional = true }
serde = { workspace = true }
serde_bytes = { version = "0.11.17", optional = true }
serde_json = { workspace = true }
snow = { version = "0.9.6", features = ["risky-raw-split"], optional = true }
thiserror = { workspace = true }
tokio = { features = ["sync", "time", "rt"], workspace = true }
tracing = { workspace = true }
tsify = { workspace = true, optional = true }
uuid = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }

[lints]
workspace = true
