[package]
name = "bitwarden-ipc"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[features]
wasm = [
    "dep:tsify",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "bitwarden-error/wasm",
    "bitwarden-threading/wasm",
] # WASM support
test-support = [] # Expose test utilities (InMemoryCommunicationBackend) for downstream crates

[dependencies]
async-trait = { workspace = true }
bitwarden-error = { workspace = true }
bitwarden-ffi = { workspace = true }
bitwarden-threading = { workspace = true }
ciborium = { workspace = true }
erased-serde = ">=0.4.6, <0.5"
js-sys = { workspace = true, optional = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
snow = { version = "0.9.6", features = ["risky-raw-split"] }
thiserror = { workspace = true }
tokio = { features = ["sync", "time", "rt"], workspace = true }
tracing = { workspace = true }
tsify = { workspace = true, optional = true }
uuid = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }

[lints]
workspace = true
